RESOLVED FIXED296510
Parse text-decoration-line: spelling-error
https://bugs.webkit.org/show_bug.cgi?id=296510
Summary Parse text-decoration-line: spelling-error
Vitor Roriz
Reported 2025-07-25 16:36:34 PDT
parse text-decoration-line: spelling-error
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-25 16:36:47 PDT
Vitor Roriz
Comment 2 2025-07-25 16:42:07 PDT
EWS
Comment 3 2025-08-13 18:42:22 PDT
Committed 298670@main (977ddc0db351): <https://commits.webkit.org/298670@main> Reviewed commits have been landed. Closing PR #48550 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.