Source/WebCore/rendering/style/RenderStyleConstants.cpp
@@ -1194,6 +1194,7 @@ TextStream& operator<<(TextStream& ts, TextDecorationLine line)
     case TextDecorationLine::Overline: ts << "overline"_s; break;
     case TextDecorationLine::LineThrough: ts << "line-through"_s; break;
     case TextDecorationLine::Blink: ts << "blink"_s; break;
+    case TextDecorationLine::SpellingError: ts << "spelling-error"_s; break;
     }
     return ts;
 }
